--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <ul>
-                            <li><a class="nav-link" href="#">Quienes somos?</a></li>
-                            <li><a class="nav-link" href="#">Productos</a></li>
-                            <li><a class="nav-link">Contactanos</a></li>
-                            <li>
-                                <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> 
-                                    <iconify-icon icon="material-symbols:shopping-cart"></iconify-icon>
-                                </button>
-                            </li>
-                        </ul>
+                    <div class="navbar-nav w-100 justify-content-around">
+                        <a class="nav-link" href="#">Quienes somos?</a>
+                        <a class="nav-link" href="#">Productos</a>
+                        <a class="nav-link">Contactanos</a>
+                        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> 
+                            <iconify-icon icon="material-symbols:shopping-cart"></iconify-icon>
+                        </button>
                     </div>
                 </div>
             </div>
