--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg ">
+    <header class="d-flex justify-content-between">
+        <nav class="navbar navbar-expand-lg w-100">
             <div class="container-fluid">
                 <div>
                     <a href="./index.html">
@@ -30,29 +30,40 @@
                     <div class="navbar-nav w-100 justify-content-around">
                         <a class="nav-link" href="#">Quienes somos?</a>
                         <a class="nav-link" href="#">Productos</a>
-                        <a class="nav-link">Contactanos</a>
-                        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> 
-                            <iconify-icon icon="material-symbols:shopping-cart"></iconify-icon>
-                        </button>
+                        <a class="nav-link" href="#" >Contactanos</a>
                     </div>
                 </div>
             </div>
         </nav>
+        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> 
+            <iconify-icon icon="material-symbols:shopping-cart"></iconify-icon>
+        </button>
     </header>
     <main>
         <h1>El lugar del Futbol Argentino</h1>
         <section id="contenedorProductos"></section>
         <aside>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                     <p>CARRITO VACIO POR AHORA</p>
                 </div>
             </div>
         </aside>
+        <section>
+            <h2 class="tituloFormulario">¿Tenés dudas? Contactanos</h2>
+            <form class="formularioContacto">
+                <input class="inputNombre" type="text" placeholder="Ingresa tu nombre">
+                <input class="inputApellido" type="text" placeholder="Ingresa tu apellido">
+                <input class="inputMail" type="email" placeholder="Ingresa tu email">
+                <input class="inputTelefono" type="number" name="" id="" placeholder="Telefono">
+                <textarea class="textArea" name="" id="" cols="10" rows="5" placeholder="Dejanos tu consulta"></textarea>
+                <button class="inputSubmit" type="submit">Enviar</button>
+            </form>
+        </section>
     </main>
     <footer>
         
