--- a/index.html
+++ b/index.html
@@ -66,7 +66,20 @@
         </section>
     </main>
     <footer>
-        
+        <div class="d-flex align-items-center">
+            <h3 class="tituloFooter">Buscanos en nuestras redes sociales!</h3>
+            <div class="contenedorRedes">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <iconify-icon icon="uil:instagram-alt"></iconify-icon>
+                </a>
+                <a href="https://es-la.facebook.com/" target="_blank">
+                    <iconify-icon icon="carbon:logo-facebook"></iconify-icon>
+                </a>
+                <a href="https://twitter.com/?lang=es" target="_blank">
+                    <iconify-icon icon="ant-design:twitter-square-filled"></iconify-icon>
+                </a>
+            </div>
+        </div>
     </footer>
     <script src="https://code.iconify.design/iconify-icon/1.0.5/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
