--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav w-100 justify-content-around">
+                    <div class="navbar-nav w-100 justify-content-around mt-3">
                         <a class="nav-link" href="#">Quienes somos?</a>
                         <a class="nav-link" href="#">Productos</a>
-                        <a class="nav-link" href="#" >Contactanos</a>
+                        <a class="nav-link" href="#seccionFormulario" >Contactanos</a>
                     </div>
                 </div>
             </div>
         </nav>
-        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> 
+        <button class="btn botonCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> 
             <iconify-icon icon="material-symbols:shopping-cart"></iconify-icon>
         </button>
     </header>
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </aside>
-        <section>
+        <section id="seccionFormulario">
             <h2 class="tituloFormulario">¿Tenés dudas? Contactanos</h2>
             <form class="formularioContacto">
                 <input class="inputNombre" type="text" placeholder="Ingresa tu nombre">
